--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,10 @@
-# Object files
+npm-debug.log
+build/
+node_modules/
+
+capture-jpeg
+list-controls
+list-formats
 *.o
-*.ko
-*.obj
-*.elf
-
-# Precompiled Headers
-*.gch
-*.pch
-
-# Libraries
-*.lib
-*.a
-*.la
-*.lo
-
-# Shared objects (inc. Windows DLLs)
-*.dll
-*.so
-*.so.*
-*.dylib
-
-# Executables
-*.exe
-*.out
-*.app
-*.i*86
-*.x86_64
-*.hex
-
-# Debug files
-*.dSYM/
+result*.png
+result*.jpg
